# ImageNet

./: Discriminator.model  LICENSE  data_fetch.py  dataset.py  evaluate.py  model.py  requirements.txt  tests.py  train.py
csrc/: CMakeLists.txt  imagenet  main.cc  model.cc  model.h  run_build.sh
